fix: Adjust hide transform value in navbar for improved visibility

--- a/src/apps/client/features/navbarBottom/assets/NavbarBottom.module.css
+++ b/src/apps/client/features/navbarBottom/assets/NavbarBottom.module.css
@@ -26,7 +26,7 @@
 }
 
 .navbar.hide {
-  transform: translateY(100%);
+  transform: translateY(200%);
 }
 
 .navbar {
